--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,4 @@ dmypy.json
 # End of https://www.gitignore.io/api/python,jupyternotebooks,visualstudiocode
 random_sounds.wav
 .DS_Store
+.vscode
