--- a/requirements.txt
+++ b/requirements.txt
@@ -9,15 +9,18 @@ cachetools==4.0.0
 certifi==2019.11.28
 cffi==1.14.0
 chardet==3.0.4
+cloudpickle==1.2.2
 cycler==0.10.0
 decorator==4.4.1
 defusedxml==0.6.0
 entrypoints==0.3
+future==0.18.2
 gast==0.2.2
 google-auth==1.11.2
 google-auth-oauthlib==0.4.1
 google-pasta==0.1.8
 grpcio==1.27.2
+gym==0.16.0
 h5py==2.10.0
 idna==2.9
 importlib-metadata==1.5.0
@@ -66,6 +69,7 @@ ptyprocess==0.6.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.19
+pyglet==1.5.0
 Pygments==2.5.2
 pyparsing==2.4.6
 pyrsistent==0.15.7
