--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,8 @@ astor==0.8.1
 attrs==19.3.0
 audioread==2.1.8
 backcall==0.1.0
-<<<<<<< HEAD
-bleach==3.1.2
 black==19.10b0
-=======
 bleach==3.1.4
->>>>>>> origin/dependabot/pip/bleach-3.1.4
 cachetools==4.0.0
 certifi==2019.11.28
 cffi==1.14.0
@@ -104,6 +100,7 @@ terminado==0.8.3
 testpath==0.4.4
 toml==0.10.0
 tornado==6.0.3
+tqdm==4.45.0
 traitlets==4.3.3
 typed-ast==1.4.1
 urllib3==1.25.8
